--- a/project-9-web-app/app/plan.css
+++ b/project-9-web-app/app/plan.css
@@ -107,7 +107,7 @@ body {
 }
 
 /* Footer */
-/* .footer {    
+.footer {    
   margin-top: 40px;
   text-align: center;
   font-size: 0.9rem;
@@ -115,4 +115,4 @@ body {
   padding: 10px 0;
   background-color: #f4f4f9;
   border-top: 1px solid #ddd;
-} */
+}
